WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240072
Crash under WebCore: WebCore::CachedResourceClientWalker<WebCore::CachedImageClient>::next()
https://bugs.webkit.org/show_bug.cgi?id=240072
Summary
Crash under WebCore: WebCore::CachedResourceClientWalker<WebCore::CachedImage...
Chris Dumez
Reported
2022-05-04 10:34:10 PDT
Crash under WebCore: WebCore::CachedResourceClientWalker<WebCore::CachedImageClient>::next().
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-05-04 10:34:18 PDT
<
rdar://92717726
>
Chris Dumez
Comment 2
2022-05-04 10:38:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/495
EWS
Comment 3
2022-05-04 17:03:24 PDT
Committed
r293804
(
250278@main
): <
https://commits.webkit.org/250278@main
> Reviewed commits have been landed. Closing PR #495 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug